Fixes to Magic 15 (prevent reload, swipe vs click on mobile, wrong animation on new game)

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -41,3 +41,7 @@
     visibility: hidden;
   }
 }
+
+html {
+  touch-action: pan-down;
+}
